# ACROPOLIS-data-processing

./: .env.example  .gitignore  CITATION.cff  README.md  config.template.json  daily_export.ipynb  multi_export.ipynb  pyproject.toml  quickflow_analysis.ipynb  single_export.ipynb
.github/workflows/: pipeline.yml
archive/: analyze_calibraion_procedure.ipynb  mc02_calibration.ipynb  mc05_calibration.ipynb  performance_indicators.py
archive/Old Database/: calibration_analysis.ipynb  convert_old_parquet.ipynb  pivot.py  quickflow_analysis.ipynb
archive/legacy/: averaged_gases_old.csv  icos_calibration.ipynb  mc01_calibration.ipynb
data/: README.md  calibration_correction.parquet
data/download/: read_parquet.ipynb
data/input/: averaged_gases.csv
data/processed/: ACROPOLIS_Blutenburgstrasse.csv
notebooks/: MC5_QC.ipynb  README.md  __init__.py  analyze_calibrations.ipynb  calibration_analysis.ipynb  compare_to_lmu_data.ipynb  download_client.ipynb  multi_export.ipynb  plot_all_data.ipynb  plot_corrected_data.ipynb  plot_data.ipynb  plot_data.py  plot_raw_data.ipynb  process_calibration_data.ipynb  processing_pipeline.ipynb  processing_pipeline_tb.ipynb  processing_pipeline_tenta.ipynb  read_picarro_files.ipynb
notebooks/Calibration_Analysis/: mc01_calibration.ipynb  mc02_calibration.ipynb  mc03_calibration.ipynb  mc04_calibration.ipynb  mc05_calibration.ipynb  mc07_calibration.ipynb  mc08_calibration.ipynb  utils.py
notebooks/Download/: __init__.py  download_from_hermes.ipynb  extract.py
notebooks/Old Database/: calibration_analysis.ipynb  convert_old_parquet.ipynb  icos_calibration.ipynb
notebooks/QC/: MC1_QC.ipynb  MC2_QC.ipynb  MC3_QC.ipynb  MC4_QC.ipynb  MC5_QC.ipynb  MC6_QC.ipynb  MC7_QC.ipynb  MC8_QC.ipynb  utils.py
notebooks/analysis_calibration_gas/: third_batch.ipynb
notebooks/analysis_deployment/: long-term-N5-rooftop.ipynb
notebooks/analysis_side_by_side/: 00_join_picarro_measurement.ipynb  01_extract_sbs_timeframes.ipynb  02_sbs_performance.ipynb  warm_days.ipynb
notebooks/archive/: analyze_1m_data.ipynb  export_site_data.ipynb  moving_average.ipynb  reduce_file_size.ipynb
notebooks/dev/: __init__.py  (+7 more)
pipeline/: 01_acropolis_postprocessing.py  02_timeseries_despiking.py  04_L1_upload_csv_icos_cp.py  L1_icos_cities_portal.py  L1_upload_csv_icos_cp.py  L1_upload_icos_cp.py  L1_write_csv_icos_cp.py  README.md  acropolis_postprocessing.py  timeseries_despiking.py  upload_icos_cities_portal.py
scripts/: run_mypy.sh
(+135 files in other folders)
