[tool.poetry]
name = "acropolis-visualisation"
version = "0.1.0"
description = "A package to visualise ACROPLIS network data"
authors = ["patrickaigner <patrick.aigner@tum.de>"]
readme = "README.md"
packages = [{include = "acropolis_visualisation"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
polars = {extras = ["connectorx", "pyarrow"], version = "^0.18.15"}
seaborn = "^0.12.2"
numpy = "^1.25.0"
plotly = "^5.15.0"
nbformat = "^5.9.0"
pandas = "^2.1.1"
datetime = "^5.2"
matplotlib = "^3.8.0"
pyarrow = "^13.0.0"
scikit-learn = "^1.3.2"
lmu-meteo-api = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
