[tool.poetry]
name = "acropolis-visualisation"
version = "0.1.0"
description = "A package to visualise ACROPLIS network data"
authors = ["patrickaigner <patrick.aigner@tum.de>"]
readme = "README.md"
packages = [{include = "acropolis_visualisation"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
seaborn = "^0.12.2"
numpy = "^1.25.0"
plotly = "^5.15.0"
nbformat = "^5.9.0"
pandas = "^2.1.1"
datetime = "^5.2"
matplotlib = "^3.8.0"
pyarrow = "^19.0.1"
scikit-learn = "^1.3.2"
lmu-meteo-api = "^0.2.0"
connectorx = "^0.3.2"
psycopg2-binary = "^2.9.9"
hampel = "^1.0.2"
hvplot = "^0.11.1"
altair = "^5.5.0"
polars = "^1.22.0"
urllib3 = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
